packages/isar_community_generator/test/errors/link/target_not_a_collection.dart
// link target is not annotated with @collection

import 'package:isar_community/isar_community.dart';

@collection
class Model {
  Id? id;

  final IsarLink<int> link = IsarLink();
}
